feat(editor): integrate frame selector widget into tool editor
- Replace splitter layout with vertical box layout
- Add FrameSelectorWidget instance to editor UI
- Load 200 frames into the frame selector
- Remove unused splitter configuration and styling
- Adjust layout hierarchy to accommodate new widget
- Update project timeline index from 6 to 2

--- a/workspace/demo/project.yaml
+++ b/workspace/demo/project.yaml
@@ -1,5 +1,5 @@
 drawing:
-  current_tool: shape
+  current_tool: brush
   tool_settings:
     adjust: {}
     brush:
@@ -37,5 +37,5 @@ drawing:
       text_color: '#000000'
     zoom: {}
 task_index: 1
-timeline_index: 6
+timeline_index: 2
 timeline_size: 7
