feat(timeline): add layer configuration to timeline config
- Added layer properties including height, width, position, and visibility
- Configured initial layer settings for image type with default dimensions
- Updated timeline index and tool specifications
- Integrated layer structure into existing timeline configuration format

--- a/workspace/demo/timeline/1/config.yaml
+++ b/workspace/demo/timeline/1/config.yaml
@@ -7,6 +7,16 @@ img2video:
   prompt: 小猫抬起强瞄准镜头，发射火枪
   timeline_index: 1
   tool: img2video
+layers:
+- height: 1280
+  id: 1
+  locked: false
+  name: Layer-1
+  type: image
+  visible: true
+  width: 720
+  x: 0
+  y: 0
 text2img:
   logs: ✅ 执行完成
   model: comfy_ui
