--- a/workspace/demo/project.yaml
+++ b/workspace/demo/project.yaml
@@ -1,5 +1,5 @@
 drawing:
-  current_tool: eraser
+  current_tool: pen
   tool_settings:
     adjust: {}
     brush:
@@ -18,8 +18,8 @@ drawing:
     pen:
       Color: '#000000'
       Size: '8'
-      color: '#000000'
-      size: '20'
+      color: '#00ffff'
+      size: '13'
     select: {}
     shape:
       Line Style: solid
@@ -37,5 +37,5 @@ drawing:
       text_color: '#000000'
     zoom: {}
 task_index: 1
-timeline_index: 2
+timeline_index: 3
 timeline_size: 7
