feat(timeline): add timeline duration management
- Add duration field to timeline item config
- Implement methods to get/set timeline duration in project config
- Add logic to automatically update total timeline duration when items change
- Update project.yaml structure to include timeline duration
- Trigger duration recalculation when timeline items are modified or added
- Add methods to calculate total timeline duration from individual items

--- a/workspace/demo/timeline/1/config.yaml
+++ b/workspace/demo/timeline/1/config.yaml
@@ -1,4 +1,5 @@
 current_tool: imgedit
+duration: 1.0
 img2video:
   input_image_path: /Users/classfoo/ai/filmeto/workspace/demo/timeline/1/image.png
   logs: ✅ 执行完成
