feat(timeline): add new layers and update composition output names
- Added three new layers (Layer-2, Layer-3, Layer-4) with image and video types
- Updated composition output filenames from output.png/output.mp4 to image.png/video.mp4
- Changed current drawing tool from eraser to brush
- Adjusted timeline index from 10 to 3 and position from 17.77 to 2.522

--- a/workspace/demo/timeline/1/config.yaml
+++ b/workspace/demo/timeline/1/config.yaml
@@ -18,6 +18,33 @@ layers:
   width: 720
   x: 0
   y: 0
+- height: 1280
+  id: 2
+  locked: false
+  name: Layer-2
+  type: image
+  visible: true
+  width: 720
+  x: 0
+  y: 0
+- height: 1280
+  id: 3
+  locked: false
+  name: Layer-3
+  type: video
+  visible: true
+  width: 720
+  x: 0
+  y: 0
+- height: 1280
+  id: 4
+  locked: false
+  name: Layer-4
+  type: image
+  visible: true
+  width: 720
+  x: 0
+  y: 0
 text2img:
   logs: ✅ 执行完成
   model: comfy_ui
