--- a/workspace/demo/project.yaml
+++ b/workspace/demo/project.yaml
@@ -1,5 +1,5 @@
 drawing:
-  current_tool: eraser
+  current_tool: brush
   tool_settings:
     adjust: {}
     brush:
@@ -38,7 +38,7 @@ drawing:
     zoom: {}
 task_index: 1
 timeline_duration: 20.125
-timeline_index: 10
+timeline_index: 3
 timeline_item_durations:
   '1': 1.0
   '10': 6.0625
@@ -50,5 +50,5 @@ timeline_item_durations:
   '7': 1.0
   '8': 1.0
   '9': 6.0625
-timeline_position: 17.77
+timeline_position: 2.522
 timeline_size: 8
