feat(ui): redesign prompt input component with split layout
- Split prompt input into left config panel and right input area
- Replace floating config panel with embedded left panel
- Add token count badge to send button
- Remove character counter and related logic
- Update styling and layout for new design
- Integrate media selector for img2video tool
- Adjust timeline and project configurations
- Update height and spacing calculations

--- a/workspace/demo/timeline/1/config.yaml
+++ b/workspace/demo/timeline/1/config.yaml
@@ -18,28 +18,19 @@ layers:
   width: 720
   x: 0
   y: 0
-- height: 1280
+- height: 1360
   id: 2
   locked: false
   name: Layer-2
   type: image
   visible: true
-  width: 720
+  width: 768
   x: 0
   y: 0
 - height: 1280
   id: 3
   locked: false
   name: Layer-3
-  type: video
-  visible: true
-  width: 720
-  x: 0
-  y: 0
-- height: 1280
-  id: 4
-  locked: false
-  name: Layer-4
   type: image
   visible: true
   width: 720
@@ -50,5 +41,6 @@ text2img:
   model: comfy_ui
   percent: 100
   prompt: 真实风格，一只小猫穿着靴子，带着帽子，腰间别着一把火枪，站在城门口
+  reference_image_path: null
   timeline_index: 1
   tool: text2img
