--- a/workspace/demo/project.yaml
+++ b/workspace/demo/project.yaml
@@ -1,5 +1,5 @@
 drawing:
-  current_tool: brush
+  current_tool: pen
   tool_settings:
     adjust: {}
     brush:
@@ -36,9 +36,9 @@ drawing:
       font_size: '14'
       text_color: '#000000'
     zoom: {}
-task_index: 8
+task_index: 10
 timeline_duration: 36.1875
-timeline_index: 13
+timeline_index: 12
 timeline_item_durations:
   '1': 1.0
   '10': 6.0625
@@ -61,5 +61,5 @@ timeline_item_durations:
   '7': 1.0
   '8': 1.0
   '9': 6.0625
-timeline_position: 22.492
+timeline_position: 21.825
 timeline_size: 8
