--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,11 @@ blinker==1.8.2
 opencv-python==4.12.0.88
 pytest==8.3.5
 pytest-qt==4.4.0
+pytest-asyncio==0.23.0
 numpy==1.24.3
 Pillow==10.4.0
 requests==2.32.4
 PyYAML==6.0.2
+aiohttp==3.9.1
+fastapi==0.108.0
+uvicorn==0.25.0
