--- a/workspace/demo/project.yaml
+++ b/workspace/demo/project.yaml
@@ -1,5 +1,5 @@
 drawing:
-  current_tool: eraser
+  current_tool: brush
   tool_settings:
     adjust: {}
     brush:
@@ -36,9 +36,9 @@ drawing:
       font_size: '14'
       text_color: '#000000'
     zoom: {}
-task_index: 46
+task_index: 47
 timeline_duration: 42.25
-timeline_index: 6
+timeline_index: 9
 timeline_item_durations:
   '1': 1.0
   '10': 6.0625
@@ -62,5 +62,5 @@ timeline_item_durations:
   '7': 1.0
   '8': 1.0
   '9': 6.0625
-timeline_position: 5.356
+timeline_position: 13.753
 timeline_size: 9
