feat(plugins): implement multi-tool demo plugin with text-to-image capabilities
- Added Text2ImageDemoPlugin supporting both text2image and image2image tools
- Implemented configurable plugin system with YAML-based configuration
- Created server list UI components with dialog interfaces
- Extended base plugin with configuration schema support
- Added comprehensive progress reporting for long-running tasks
- Included PIL-based image generation with gradient backgrounds
- Provided detailed plugin documentation and usage examples
- Added configuration schemas for Bailian and ComfyUI servers
- Updated project tool settings to use move tool by default

--- a/server/plugins/local_server/plugin.yaml
+++ b/server/plugins/local_server/plugin.yaml
@@ -1,6 +1,6 @@
-name: comfy_ui_demo
+name: multi_tool_demo
 version: 1.0.0
-description: Demo plugin supporting multiple tools for ComfyUI
+description: Demo plugin supporting multiple tools
 author: Filmeto Team
 engine: demo
 
@@ -65,22 +65,6 @@ tools:
         max: 1.0
         description: Strength of transformation
 
-  - name: inpainting
-    description: Fill in masked regions of an image
-    parameters:
-      - name: prompt
-        type: string
-        required: true
-        description: Text prompt for inpainting
-
-      - name: mask_blur
-        type: integer
-        required: false
-        default: 4
-        min: 0
-        max: 64
-        description: Blur radius for mask feathering
-
 startup:
   timeout: 30
   health_check: true
@@ -88,3 +72,14 @@ startup:
 execution:
   timeout: 300
   max_retries: 3
+
+# Configuration schema for creating server instances
+config_schema:
+  fields:
+    - name: endpoint
+      label: Local Server Endpoint
+      type: url
+      required: false
+      default: "http://localhost:8188"
+      description: Local server endpoint URL
+      placeholder: "http://localhost:8188"
