--- a/server/plugins/comfy_ui_server/plugin.yaml
+++ b/server/plugins/comfy_ui_server/plugin.yaml
@@ -1,6 +1,6 @@
-name: multi_tool_demo
+name: comfy_ui_demo
 version: 1.0.0
-description: Demo plugin supporting multiple tools
+description: Demo plugin supporting multiple tools for ComfyUI
 author: Filmeto Team
 engine: demo
 
@@ -65,6 +65,22 @@ tools:
         max: 1.0
         description: Strength of transformation
 
+  - name: inpainting
+    description: Fill in masked regions of an image
+    parameters:
+      - name: prompt
+        type: string
+        required: true
+        description: Text prompt for inpainting
+
+      - name: mask_blur
+        type: integer
+        required: false
+        default: 4
+        min: 0
+        max: 64
+        description: Blur radius for mask feathering
+
 startup:
   timeout: 30
   health_check: true
@@ -72,3 +88,22 @@ startup:
 execution:
   timeout: 300
   max_retries: 3
+
+# Configuration schema for creating server instances
+config_schema:
+  fields:
+    - name: endpoint
+      label: ComfyUI Endpoint
+      type: url
+      required: true
+      default: "http://localhost:8188"
+      description: ComfyUI server endpoint URL
+      placeholder: "http://localhost:8188"
+    
+    - name: timeout
+      label: Request Timeout
+      type: integer
+      required: false
+      default: 300
+      description: Request timeout in seconds
+      placeholder: "300"
