feat(server): update plugin names and descriptions
- Rename multi_tool_demo plugin to Bailian Server
- Update description for Bailian Server plugin
- Rename comfy_ui_demo plugin to ComfyUI Server
- Simplify description for ComfyUI Server plugin
- Rename multi_tool_demo plugin to Filmeto Server
- Update description for Filmeto Server plugin
- Rename multi_tool_demo plugin to local
- Update description for local server plugin
- Modify server list dialog to show only plugin name in menu
- Prevent overly wide menu by removing description from action text

--- a/server/plugins/comfy_ui_server/plugin.yaml
+++ b/server/plugins/comfy_ui_server/plugin.yaml
@@ -1,6 +1,6 @@
-name: comfy_ui_demo
+name: ComfyUI Server
 version: 1.0.0
-description: Demo plugin supporting multiple tools for ComfyUI
+description: ComfyUI sever
 author: Filmeto Team
 engine: demo
 
