--- a/server/plugins/filmeto_server/plugin.yaml
+++ b/server/plugins/filmeto_server/plugin.yaml
@@ -1,6 +1,6 @@
-name: multi_tool_demo
+name: Filmeto Server
 version: 1.0.0
-description: Demo plugin supporting multiple tools
+description: Filmeto Server supporting multiple tools
 author: Filmeto Team
 engine: demo
 
