feat(plugins): update plugin engines and demo tool setting
- Change bailian server engine from demo to bailian
- Update comfy_ui server engine from demo to comfyui
- Switch filmeto server engine from demo to filmeto
- Modify local server engine from demo to local
- Set default drawing tool in demo project from move to pen

--- a/server/plugins/bailian_server/plugin.yaml
+++ b/server/plugins/bailian_server/plugin.yaml
@@ -2,7 +2,7 @@ name: Bailian Server
 version: 1.0.0
 description: Bailian Server supporting multiple tools
 author: Filmeto Team
-engine: demo
+engine: bailian
 
 requirements:
   python: ">=3.9"
