feat(core): integrate ComfyUI plugin with server routing architecture
- Add workspace_path parameter to FilmetoApi and FilmetoService initialization
- Implement ServerManager integration for task routing and plugin execution
- Replace direct plugin execution with server-based task routing via ServerManager
- Update ComfyUI plugin to use actual ComfyUI API with WebSocket progress tracking
- Add proper workflow loading and parameter injection for ComfyUI text2image
- Modify text2image tool to use new FilmetoApi task execution interface
- Add proper resource handling and metadata passing for plugin execution
- Update plugin configuration and requirements for ComfyUI integration

--- a/server/plugins/comfy_ui_server/plugin.yaml
+++ b/server/plugins/comfy_ui_server/plugin.yaml
@@ -1,6 +1,6 @@
-name: ComfyUI Server
+name: ComfyUI
 version: 1.0.0
-description: ComfyUI sever
+description: ComfyUI integration for AI image and video generation
 author: Filmeto Team
 engine: comfyui
 
