--- a/server/plugins/bailian_server/plugin.yaml
+++ b/server/plugins/bailian_server/plugin.yaml
@@ -65,6 +65,19 @@ tools:
         max: 1.0
         description: Strength of transformation
 
+  - name: bailian_app
+    description: Execute a Bailian Application task
+    parameters:
+      - name: prompt
+        type: string
+        required: true
+        description: Input prompt for the Bailian App
+      
+      - name: app_id
+        type: string
+        required: false
+        description: Bailian App ID (overrides default config)
+
 startup:
   timeout: 30
   health_check: true
@@ -76,18 +89,34 @@ execution:
 # Configuration schema for creating server instances
 config_schema:
   fields:
-    - name: api_key
-      label: API Key
+    - name: access_key_id
+      label: AccessKey ID
+      type: string
+      required: true
+      default: ""
+      description: Alibaba Cloud AccessKey ID
+      placeholder: "LTAI..."
+    
+    - name: access_key_secret
+      label: AccessKey Secret
       type: password
       required: true
       default: ""
-      description: Bailian API key for authentication
-      placeholder: "Enter your Bailian API key"
+      description: Alibaba Cloud AccessKey Secret
+      placeholder: "Enter AccessKey Secret"
+
+    - name: agent_key
+      label: Agent Key / App ID
+      type: string
+      required: true
+      default: ""
+      description: Bailian Agent Key or App ID
+      placeholder: "Enter Agent Key or App ID"
     
     - name: endpoint
       label: API Endpoint
       type: url
       required: false
-      default: ""
-      description: Custom API endpoint (optional)
-      placeholder: "https://api.bailian.example.com"
+      default: "https://bailian.aliyuncs.com"
+      description: Bailian API endpoint
+      placeholder: "https://bailian.aliyuncs.com"
