feat(api): update plugin listing and task result handling
- Modify list_plugins to return separate entries for each tool within plugins
- Update get_plugins_by_tool to use tool_name parameter as tool_type
- Create BaseModelResult wrapper for FilmetoTaskResult in img2video, imgedit, and text2img tools
- Add params method to text2img tool for parameter retrieval
- Update demo project timeline indices and positions
- Change text2img logs from '执行完成' to 'Routing task to server...'
- Adjust text2img percent from 100 to 10 in demo config

--- a/workspace/demo/timeline/1/config.yaml
+++ b/workspace/demo/timeline/1/config.yaml
@@ -37,9 +37,9 @@ layers:
   x: 0
   y: 0
 text2img:
-  logs: ✅ 执行完成
+  logs: Routing task to server...
   model: comfy_ui
-  percent: 100
+  percent: 10
   prompt: 真实风格，一只小猫穿着靴子，带着帽子，腰间别着一把火枪，站在城门口
   reference_image_path: null
   timeline_index: 1
