fix(server): resolve plugin import conflicts and update progress reporting
- Replace sys.path modification with direct importlib approach to avoid naming conflicts
- Load base_plugin.py module directly using importlib.util to prevent import issues
- Add completion progress callback at 100% to properly report task completion
- Update task_index from 50 to 55 in project configuration
- Adjust timeline_position from 0.689 to 0.267 for accurate timeline positioning
- Change completion status from 'Routing task to server...' to 'Task completed' in config
- Update progress percentage from 10 to 95 in timeline configuration

--- a/workspace/demo/timeline/1/config.yaml
+++ b/workspace/demo/timeline/1/config.yaml
@@ -37,9 +37,9 @@ layers:
   x: 0
   y: 0
 text2img:
-  logs: Routing task to server...
+  logs: Task completed
   model: comfy_ui
-  percent: 10
+  percent: 95
   prompt: 真实风格，一只小猫穿着靴子，带着帽子，腰间别着一把火枪，站在城门口
   reference_image_path: null
   timeline_index: 1
