feat(comfy_ui_server): add image2video functionality and improve plugin loading
- Added image2video tool to convert images to animated videos based on text prompts
- Implemented dynamic import system for base_plugin to avoid naming conflicts
- Used importlib.util to load base plugin module directly from file path
- Updated project.yaml task_index from 55 to 58 and timeline_position from 0.267 to 0.278
- Added proper module loading mechanism for ComfyUI client integration

--- a/server/plugins/comfy_ui_server/plugin.yaml
+++ b/server/plugins/comfy_ui_server/plugin.yaml
@@ -81,6 +81,19 @@ tools:
         max: 64
         description: Blur radius for mask feathering
 
+  - name: image2video
+    description: Animate image based on text prompt
+    parameters:
+      - name: prompt
+        type: string
+        required: true
+        description: Text prompt for animation
+
+      - name: input_image_path
+        type: string
+        required: true
+        description: Path to input image for animation
+
 startup:
   timeout: 30
   health_check: true
