fix(comfy_ui): correct client_id handling in workflow payload
- Move client_id replacement logic inside prompt key check condition
- Prevent adding client_id to prompt graph when using direct prompt
- Only add client_id to payload wrapper, not to the prompt graph itself
- Update node counting logic to exclude client_id from node count
- Add two new image layers to timeline configuration
- Increment task_index from 80 to 82 in project config
- Update timeline_position from 0.278 to 0.322 in project config

--- a/workspace/demo/timeline/1/config.yaml
+++ b/workspace/demo/timeline/1/config.yaml
@@ -36,6 +36,24 @@ layers:
   width: 720
   x: 0
   y: 0
+- height: 1280
+  id: 4
+  locked: false
+  name: Layer-4
+  type: image
+  visible: true
+  width: 720
+  x: 0
+  y: 0
+- height: 1280
+  id: 5
+  locked: false
+  name: Layer-5
+  type: image
+  visible: true
+  width: 720
+  x: 0
+  y: 0
 text2img:
   logs: Task completed
   model: comfy_ui
