--- a/workspace/demo/timeline/1/config.yaml
+++ b/workspace/demo/timeline/1/config.yaml
@@ -63,18 +63,72 @@ layers:
   width: 720
   x: 0
   y: 0
+- height: 1280
+  id: 7
+  locked: false
+  name: Layer-7
+  type: image
+  visible: true
+  width: 720
+  x: 0
+  y: 0
+- height: 1280
+  id: 8
+  locked: false
+  name: Layer-8
+  type: image
+  visible: true
+  width: 720
+  x: 0
+  y: 0
+- height: 1280
+  id: 9
+  locked: false
+  name: Layer-9
+  type: image
+  visible: true
+  width: 720
+  x: 0
+  y: 0
+- height: 1280
+  id: 10
+  locked: false
+  name: Layer-10
+  type: image
+  visible: true
+  width: 720
+  x: 0
+  y: 0
+- height: 1280
+  id: 11
+  locked: false
+  name: Layer-11
+  type: image
+  visible: true
+  width: 720
+  x: 0
+  y: 0
+- height: 1280
+  id: 12
+  locked: false
+  name: Layer-12
+  type: image
+  visible: true
+  width: 720
+  x: 0
+  y: 0
 text2img:
-  image_resource_name: 3a07b62b-ed60-4559-b82f-f8ff307628f3_ComfyUI_01178_.png
-  image_resource_path: resources/images/3a07b62b-ed60-4559-b82f-f8ff307628f3_ComfyUI_01178_.png
+  image_resource_name: 80cbc168-585f-4685-979a-d21b7ea0bb95_ComfyUI_01184_.png
+  image_resource_path: resources/images/80cbc168-585f-4685-979a-d21b7ea0bb95_ComfyUI_01184_.png
   logs: Task completed
   model: comfy_ui
   percent: 95
   prompt: 真实风格，一只小猫穿着靴子，带着帽子，腰间别着一把火枪，站在城门口
   reference_image_path: null
   resources:
-  - resource_id: 8232b94a-5684-45e8-8518-2002c1adaeb7
-    resource_name: 3a07b62b-ed60-4559-b82f-f8ff307628f3_ComfyUI_01178_.png
-    resource_path: resources/images/3a07b62b-ed60-4559-b82f-f8ff307628f3_ComfyUI_01178_.png
+  - resource_id: 752c0e78-c4f9-4287-a290-2ec22afdac7c
+    resource_name: 80cbc168-585f-4685-979a-d21b7ea0bb95_ComfyUI_01184_.png
+    resource_path: resources/images/80cbc168-585f-4685-979a-d21b7ea0bb95_ComfyUI_01184_.png
     type: image
   status: success
   timeline_index: 1
