--- a/workspace/demo/project.yaml
+++ b/workspace/demo/project.yaml
@@ -1,5 +1,5 @@
 drawing:
-  current_tool: pen
+  current_tool: brush
   tool_settings:
     adjust: {}
     brush:
@@ -38,7 +38,7 @@ drawing:
     zoom: {}
 task_index: 96
 timeline_duration: 42.25
-timeline_index: 7
+timeline_index: 3
 timeline_item_durations:
   '1': 1.0
   '10': 6.0625
@@ -62,5 +62,5 @@ timeline_item_durations:
   '7': 1.0
   '8': 1.0
   '9': 6.0625
-timeline_position: 6.289
+timeline_position: 2.578
 timeline_size: 9
