--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,7 @@ PyYAML==6.0.2
 aiohttp==3.9.1
 fastapi==0.108.0
 uvicorn==0.25.0
+langgraph>=0.2.0
+langchain>=0.3.0
+langchain-core>=0.3.0
+langchain-openai>=0.2.0
