--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-PySide6==6.6.3.1
+PySide6==6.9.3
 modelscope==1.30.0
-pyyaml==6.0.2
-qasync==0.28.0
-diffusers==0.35.1
+PyYAML==6.0.1
+qasync==0.25.0
+diffusers==0.21.4
 dashscope==1.24.5
 pandas==2.0.3
 websockets==13.1
@@ -11,14 +11,13 @@ opencv-python==4.12.0.88
 pytest==8.3.5
 pytest-qt==4.4.0
 pytest-asyncio==0.23.0
-numpy==1.24.3
+numpy>=2.0.0,<2.3.0
 Pillow==10.4.0
 requests==2.32.4
-PyYAML==6.0.2
 aiohttp==3.9.1
 fastapi==0.108.0
 uvicorn==0.25.0
-langgraph>=0.2.0
-langchain>=0.3.0
-langchain-core>=0.3.0
-langchain-openai>=0.2.0
+langgraph==1.0.5
+langchain>=1.0.0,<2.0.0
+langchain-core>=1.0.0,<2.0.0
+langchain-openai>=1.0.0,<2.0.0
