feat(agent): add AI service configuration and improve agent initialization
- Add AI services settings section with OpenAI API key and default model selection
- Make agent model and temperature configurable through workspace settings
- Implement fallback mechanism to use environment variable for OpenAI API key
- Add validation to prevent graph building when LLM is not initialized
- Handle missing API key gracefully with error messages in chat stream
- Enable dynamic context updates with new API key support
- Add proper error handling for uninitialized LLM in agent operations
- Include temperature setting with default value of 0.7
- Implement model selection from configured options (gpt-4o-mini, gpt-4-turbo, gpt-3.5-turbo)

--- a/app/data/settings_template.yaml
+++ b/app/data/settings_template.yaml
@@ -88,3 +88,29 @@ groups:
         type: boolean
         default: false
         description: Automatically overwrite files with the same name
+
+  - name: ai_services
+    label: AI Services
+    icon: ""
+    fields:
+      - name: openai_api_key
+        label: OpenAI API Key
+        type: text
+        default: ""
+        description: Your OpenAI API key for AI services
+        validation:
+          max_length: 200
+          pattern: "^sk-[a-zA-Z0-9]+$"
+        
+      - name: default_model
+        label: Default AI Model
+        type: select
+        default: gpt-4o-mini
+        description: Default model for AI services
+        options:
+          - value: gpt-4o-mini
+            label: GPT-4o Mini
+          - value: gpt-4-turbo
+            label: GPT-4 Turbo
+          - value: gpt-3.5-turbo
+            label: GPT-3.5 Turbo
