refactor(ui): restructure window module and update agent configuration
- Move main_window module to window module with new directory structure
- Update import paths across application to use new window module location
- Modify FilmetoAgent to read API key and base_url from workspace settings
- Add base_url parameter support in agent initialization
- Update settings template with new AI service configuration options
- Add example for settings-based agent configuration
- Update project timeline values in demo workspace
- Revise README documentation for new configuration approach
- Update object naming in main window UI setup

--- a/app/data/settings_template.yaml
+++ b/app/data/settings_template.yaml
@@ -99,8 +99,23 @@ groups:
         default: ""
         description: Your OpenAI API key for AI services
         validation:
-          max_length: 200
-          pattern: "^sk-[a-zA-Z0-9]+$"
+          max_length: 500
+      
+      - name: openai_host
+        label: OpenAI API Host
+        type: text
+        default: "https://dashscope.aliyuncs.com/compatible-mode/v1"
+        description: OpenAI API base URL for LangGraph initialization
+        validation:
+          max_length: 500
+      
+      - name: openai_ak_sk
+        label: OpenAI Access Key/Secret Key
+        type: text
+        default: ""
+        description: OpenAI AK/SK for alternative authentication (optional)
+        validation:
+          max_length: 500
         
       - name: default_model
         label: Default AI Model
