refactor(ui): optimize agent panel imports and styling
- Removed unused QVBoxLayout import from agent panel
- Removed unused QObject import from agent panel
- Moved ChatHistoryWidget import to correct module path
- Removed border styles from agent prompt context widget
- Removed border styles from send toolbar widget
- Changed default drawing tool from brush to pen in demo project
- Updated timeline position value in demo project configuration

--- a/workspace/demo/project.yaml
+++ b/workspace/demo/project.yaml
@@ -1,5 +1,5 @@
 drawing:
-  current_tool: brush
+  current_tool: pen
   tool_settings:
     adjust: {}
     brush:
@@ -62,5 +62,5 @@ timeline_item_durations:
   '7': 1.0
   '8': 1.0
   '9': 6.0625
-timeline_position: 5.433
+timeline_position: 5.389
 timeline_size: 9
