--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,4 @@ requests==2.32.4
 aiohttp==3.9.1
 fastapi==0.108.0
 uvicorn==0.25.0
-langgraph==1.0.5
-langchain>=1.0.0,<2.0.0
-langchain-core>=1.0.0,<2.0.0
-langchain-openai>=1.0.0,<2.0.0
+litellm>=1.40.0
