--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ pytest-asyncio==0.23.0
 numpy>=2.0.0,<2.3.0
 Pillow==10.4.0
 requests==2.32.4
-aiohttp==3.9.1
+aiohttp>=3.10
 fastapi==0.108.0
 uvicorn==0.25.0
-litellm>=1.40.0
+litellm>=1.80.15
