feat(llm): add DashScope API integration support
- Added dashscope_adapter module with async/sync completion and embedding functions
- Updated LlmService to handle DashScope API compatibility with custom configurations
- Added special handling for DashScope API base URLs with proper header configuration
- Modified completion and embedding methods to route requests to DashScope adapters
- Updated settings template with DashScope-specific API host information
- Added conditional logic to use DashScope-specific implementations when applicable
- Maintained backward compatibility with standard OpenAI API endpoints

--- a/app/data/settings_template.yml
+++ b/app/data/settings_template.yml
@@ -97,7 +97,7 @@ groups:
         label: OpenAI API Host
         type: text
         default: "https://dashscope.aliyuncs.com/compatible-mode/v1"
-        description: OpenAI API base URL for LangGraph initialization
+        description: OpenAI API base URL for LangGraph initialization (use https://dashscope.aliyuncs.com/compatible-mode/v1 for Alibaba Cloud DashScope)
         validation:
           max_length: 500
 
