feat(chat): enhance plan selection and tracking in agent chat
- Update current plan ID when loading plans to maintain state
- Prioritize active plans when selecting default plan for project
- Fall back to most recent plan regardless of status if no active plans exist
- Add settings field to track last selected plan ID in agent interface
- Implement proper sorting of plan instances by creation time
- Maintain backward compatibility for existing plan workflows

--- a/app/data/settings_template.yml
+++ b/app/data/settings_template.yml
@@ -89,6 +89,18 @@ groups:
         default: false
         description: Automatically overwrite files with the same name
 
+  - name: agent
+    label: Agent
+    icon: ""
+    fields:
+      - name: last_selected_plan_id
+        label: Last Selected Plan ID
+        type: text
+        default: ""
+        description: ID of the last selected plan in the agent interface
+        validation:
+          max_length: 100
+
   - name: ai_services
     label: AI Services
     icon: ""
