--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ qasync==0.25.0
 diffusers==0.21.4
 dashscope==1.24.5
 websockets==13.1
-blinker==1.8.2
-opencv-python==4.12.0.88
+blinker>=1.9
+opencv-python==4.10.0.84
 pytest==8.3.5
 pytest-qt==4.4.0
 pytest-asyncio==0.23.0
